<resources>
    <string name="app_name">Smart Contracts</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup">No account yet? <b>Create one</b></string>
    <string name="action_logout">LOGOUT</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="file_not_found">File Not Found</string>
    <string name="you_are_offline">You are offline</string>
    <string name="iitr">IIT Roorkee</string>
    <string name="iitd">IIT Delhi</string>
    <string name="iitb">IIT Bombay</string>
    <string name="iitm">IIT Madras</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="domain">Domain</string>
    <string name="location">Location</string>
    <string name="college">College</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_string">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="contact">Contact No.</string>
    <string name="room">Room</string>
    <string name="hostel">Hostel</string>
    <string name="aadhar">Aadhar No.</string>
    <string name="search_by">Search by</string>
    <string-array name="iitb_hostel_list">
        <item>Hostel 1</item>
        <item>Hostel 2</item>
        <item>Hostel 3</item>
        <item>Hostel 4</item>
        <item>Hostel 5</item>
        <item>Hostel 6</item>
        <item>Hostel 7</item>
        <item>Hostel 8</item>
        <item>Hostel 9</item>
        <item>Hostel 10</item>
        <item>Hostel 11</item>
        <item>Hostel 12</item>
        <item>Hostel 13</item>
        <item>Hostel 14</item>
        <item>Tansa</item>
    </string-array>
    <string-array name="iitd_hostel_list">
        <item>Aravali</item>
        <item>Girnar</item>
        <item>Himadri</item>
        <item>Jwalamukhi</item>
        <item>Kailash</item>
        <item>Karakoram</item>
        <item>Kumaon</item>
        <item>Nilgiri</item>
        <item>Satpura</item>
        <item>Shivalik</item>
        <item>Udaigiri</item>
        <item>Vindhyachal</item>
        <item>Zanskar</item>
    </string-array>
    <string-array name="iitm_hostel_list">
        <item>Alaknanda</item>
        <item>Brahmaputra</item>
        <item>Cauvery</item>
        <item>Ganga</item>
        <item>Godavari</item>
        <item>Jamuna</item>
        <item>Krishna</item>
        <item>Mahanadhi</item>
        <item>Mandakini</item>
        <item>Narmada</item>
        <item>Pampa</item>
        <item>Saraswathi</item>
        <item>Sarayu</item>
        <item>Sharavati</item>
        <item>Sindhu</item>
        <item>Tamraparani</item>
        <item>Tapni</item>
        <item>Bhatra</item>
        <item>Tunga</item>
    </string-array>
    <string-array name="iitr_hostel_list">
        <item>Azad</item>
        <item>Cautley</item>
        <item>Ganga</item>
        <item>Govind</item>
        <item>Jawahar</item>
        <item>Kasturba</item>
        <item>Malviya</item>
        <item>Radhakrishnan</item>
        <item>Rajendra</item>
        <item>Rajiv</item>
        <item>Ravindra</item>
        <item>Sarojini</item>
    </string-array>
    <string-array name="options">
        <item>All</item>
        <item>Title</item>
        <item>Author</item>
    </string-array>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="try_now">Try Now</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="email_helper_string">This field is optional.</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://192.168.43.50\",\n  }\n}]</string>
    <string name="forgot_password_email_hint">Email</string>
    <string name="forgot_password_submit_button">Submit</string>
    <string name="new_pwd">New Password</string>
    <string name="cnf_pwd">Confirm Password</string>
    <string name="reset_password_submit_button">Reset Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="new_activation">Account not activated?</string>
    <string name="new_otp">Phone not activated?</string>
    <string name="verify_otp">Enter verification code</string>
    <string name="forgot_password_message">Enter your email below to receive your password reset instructions</string>
    <string name="new_activation_message">Enter your email below to receive your account activation instructions</string>
    <string name="new_otp_message">Enter your email below to receive your new verification code</string>
    <string name="verify_otp_message">Please wait for the verification code to be detected or enter manually</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="reset_password_message">Password should be of atleast 8 characters</string>
    <string name="send_link">&#8226;Resend activation link</string>
    <string name="send_otp">&#8226;Resend Otp</string>
    <string name="skip">SKIP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">NEXT</string>
    <string name="lets_begin">LET\'S BEGIN</string>
    <string-array name="title_list">
        <item>CAMPUS BOOKS</item>
        <item>ADD BOOKS</item>
        <item>NOTIFICATION</item>
        <item>USER SEARCH</item>
    </string-array>
    <string-array name="description_list">
        <item>Browse through the collection of books owned by different students of your campus</item>
        <item>Easily search and add a book to your collection</item>
        <item>Get notified when someone sends a request for a book, or accepts your book request</item>
        <item>Search for other book-worms in your campus</item>
    </string-array>
</resources>
